# drf-auth

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
Food/: permissions.py
Food/migrations/: 0001_initial.py
drf_auth/: settings.py  urls.py
